--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <script src="C:/Users/U1/Desktop/2242697-kekstagram-2/js/main.js"></script>
   <main>
 
     <!-- Фильтрация изображений от других пользователей -->
