--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <script src="C:/Users/U1/Desktop/2242697-kekstagram-2/js/main.js"></script>
+  
   <main>
 
     <!-- Фильтрация изображений от других пользователей -->
@@ -232,6 +232,6 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
