--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <section class="error">
       <div class="error__inner">
         <h2 class="error__title">Ошибка загрузки файла</h2>
-        <button type="button" class="error__button">Попробовать ещё раз</button>
+        <button type="button" class="error__button">Загрузить другой файл</button>
       </div>
     </section>
   </template>
@@ -231,6 +231,8 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-<script src="js/main.js" type="module"></script>
+
+  <script src="./js/main.js" type="module"></script>
+
 </body>
 </html>
